@@ -1,4 +1,4 @@
-# $Id: fr.rb,v 1.13 2005-06-23 03:14:06 fdiary Exp $
+# $Id: fr.rb,v 1.14 2005-07-08 05:39:06 fdiary Exp $
 # fr.rb
 #
 # Copyright (C) 2003 Laurent Sansonetti <laurent@datarescue.be>
@@ -41,7 +41,7 @@ module Hiki
     def msg_use; 'Utiliser' end
     def msg_unuse; 'Ne pas utiliser' end
     def msg_login_info; '(TRANSLATE PLEASE) If you want to login as an administrator, type \'admin\' in the Name field.' end
-    def msg_login_failure; '(TRANSLATE PLEASE) Wrong name or password.'
+    def msg_login_failure; '(TRANSLATE PLEASE) Wrong name or password.' end
     def msg_name; 'Nom' end
     def msg_password; 'Mot de passe' end
     def msg_ok; 'OK' end
